--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "url": "https://github.com/heroku/heroku-buildpack-nodejs"
     },
     {
-      "url": "https://github.com/ORuban/aspnetcore-buildpack.git"
+      "url": "https://github.com/jincod/dotnet-buildpack"
     }
   ]
 }
