--- a/app.json
+++ b/app.json
@@ -8,7 +8,7 @@
       "url": "https://github.com/heroku/heroku-buildpack-nodejs"
     },
     {
-      "url": "http://github.com/heroku/dotnet-buildpack.git"
+      "url": "https://github.com/jincod/dotnet-buildpack.git#be8e49958c09ad50a1578cefa39c2d71faab9828"
     }
   ]
 }
